# flet-github-action-workflows

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: aab-build.yml  all-builds.yml  apk-build.yml  desktop-and-mobile-builds.yml  desktop-builds.yml  ipa-build.yml  linux-build.yml  macos-build.yml  mobile-builds.yml  web-build-and-gh-pages-deploy.yml  web-build-and-github-pages-deploy.yml  windows-build.yml
src/: main.py
