[project]
name = "flet-gh-action-workflows"
version = "0.1.0"
description = "A simple Flet app, built by GitHub Actions."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet==0.80.5"
]

[dependency-groups]
dev = [
    "flet[all]==0.80.5",
]

[tool.flet]
org = "com.mycompany"
product = "flet-gh-pages-example"
artifact = "flet_gh_pages_example"
company = "Flet"
copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src"

[tool.flet.template]
ref = "0.80.6"